--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
-== README
+= Movie Rating & Review App
+== Week 5 of my 12 in 12 Challenge
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Currently i am learning Ruby on Rails, so i build this web app to give myself better understanding of rails.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+In this application, I built a movie rating and review app with users, movies, review (on a 1-5 rating system) and the ability to search.
